# Django-AuthToken

./: .gitignore  README.md  db.sqlite3  pyproject.toml  test.rest
server/: settings.py  views.py
tests/: test_views.py
